compiler-core/src/parse/snapshots/rakun_core__parse__tests__reserved_auto.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 713
expression: const auto = 1
---
----- SOURCE CODE
const auto = 1

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:1:7
  │
1 │ const auto = 1
  │       ^^^^ This is a reserved word

Hint: I was expecting to see a name here.
